kubernetes/app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  selector:
    app: backend
  ports:
  - name: backend-port
    protocol: TCP
    port: 8000
    targetPort: 8000
