kubernetes/app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app
spec:
  selector:
    app: frontend
  ports:
  - name: frontend-port
    protocol: TCP
    port: 80
    targetPort: 80
