kubernetes/app/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: app
spec:
  type: NodePort
  selector:
    app: proxy
  ports:
    - port: 80
      targetPort: 80
