kubernetes/app/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - taskmanager.local
    secretName: taskmanager-tls
  rules:
  - host: taskmanager.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
